remove use of java 11 features